--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
+  <!-- <link rel="stylesheet" href="css/reset.css">--> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,12 +13,33 @@
     </header>
     <main>
 
-        <p>I'm Noor Al-Shareedeh (Al-Omari), I'm 23 years old, I’m from Irbid but I born in Malaysia. <br> I graduated as a civil engineer from Al-Balqa Applied University with very good grade. I have a passion to learn new things and to take new experiences. I am interested in programming and I am developing my skills in this field. I love helping people and I participated in organizing a lot of volunteer work and I had an activity in student work at university. After graduation I worked in private teaching for school students from different stages as part-time work.</p>
+        <p>I'm Noor Al-Shareedeh (Al-Omari), I'm 23 years old, I’m from Irbid. <br>  I have a passion to learn new things and to take new experiences. I am interested in programming and I am developing my skills in this field. I love helping people and I participated in organizing a lot of volunteer work and I had an activity in student work at university. After graduation I worked in private teaching for school students from different stages as part-time work.</p>
+         
+        <ul>
+          <li>TRAINING: Greater Irbid Municipality  (2/2/2019 - 16/5/2019) University trainee.</li>
 
+          <li>EDUCATION: Al-Balqa Applied University, Civil Engineering-Water and Environmental / B.S, GPA : 3.61 out of 4 (V.Good)</li>
+        </ul>
+        <h3>Top 10 Movies</h3>
+        <ol>
+            <li>Inside out</li>
+            <li>Soul</li>
+            <li>Inception</li>
+            <li>The lion king</li>
+            <li>The Emperor's New Groove </li>
+            <li>Harry Potter</li>
+            <li>Home</li>
+            <li>Coco</li>
+            <li>Now You See Me</li>
+            <li>Knives Out</li>
+        </ol>
     </main>
+    <ol>
+    <script src="js/app.js"></script>
+    </ol>
     <footer>
         &copy; copyright 2021
     </footer>
-    <script src="js/app.js"></script>
+    
 </body>
 </html>
