--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Document</title>
-  <!-- <link rel="stylesheet" href="css/reset.css">--> 
+  <link rel="stylesheet" href="css/reset.css"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -34,12 +34,11 @@
             <li>Knives Out</li>
         </ol>
     </main>
-    <ol>
-    <script src="js/app.js"></script>
-    </ol>
+    
     <footer>
-        &copy; copyright 2021
+      &copy; copyright 2021
     </footer>
     
+    <script src="js/app.js"></script>
 </body>
 </html>
