add some styling

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         </nav>
     </header>
     <main>
-
+      <div id="paragraph1">
         <p>I'm Noor Al-Shareedeh (Al-Omari), I'm 23 years old, I’m from Irbid. <br>  I have a passion to learn new things and to take new experiences. I am interested in programming and I am developing my skills in this field. I love helping people and I participated in organizing a lot of volunteer work and I had an activity in student work at university. After graduation I worked in private teaching for school students from different stages as part-time work.</p>
-         
-        <ul>
-          <li>TRAINING: Greater Irbid Municipality  (2/2/2019 - 16/5/2019) University trainee.</li>
+      </div>
+        <ul class="list">
+          <li><span>TRAINING:</span> Greater Irbid Municipality  (2/2/2019 - 16/5/2019) University trainee.</li>
 
-          <li>EDUCATION: Al-Balqa Applied University, Civil Engineering-Water and Environmental / B.S, GPA : 3.61 out of 4 (V.Good)</li>
+          <li><span>EDUCATION:</span> Al-Balqa Applied University, Civil Engineering-Water and Environmental, GPA : 3.61 out of 4 (V.Good)</li>
         </ul>
-        <h3>Top 10 Movies</h3>
-        <ol>
+        <ol class="list" id="order">
+          <p id="paragraph2">Top 10 Movies</p>
             <li>Inside out</li>
             <li>Soul</li>
             <li>Inception</li>
@@ -38,7 +38,6 @@
     <footer>
       &copy; copyright 2021
     </footer>
-    
     <script src="js/app.js"></script>
 </body>
 </html>
